# Point-Cloud-Occlusion---CMP143

./: README.md  pyproject.toml
app/: .gitignore  CMakeLists.txt  README.md  compile_commands.json
app/include/GL/: glcorearb.h  glext.h
app/include/GL3/: gl3.h
app/lib/: gl3w.c
app/res/shaders/: Basic.shader  Gouraud.shader  Phong.shader  PointCloud.shader  Resolution.shader  ResolutionThreshold.shader  Texture.shader
app/src/: Debug.h  FullImageBuffer.cpp  FullImageBuffer.hpp  Object.cpp  Object.h  Occlusion.cpp  Occlusion.h  PlyObject.cpp  PlyObject.h  PlyPointCloud.cpp  PlyPointCloud.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  close2gl.cpp  close2gl.h  close2gl_math.cpp  close2gl_math.h  main.cpp  opengl_reference.cpp  opengl_reference.h  util.cpp  util.h
notebook/: explore.ipynb
src/: occlusion.py
