[build-system] 
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta" 

[project] 
name = "point_cloud_occlusion" 
version = "0.0.1" 
description = "Point Cloud Occlusion for CMP143" 
authors = [{ name = "Pedro Sidra de Freitas", email = "pedro.sidra@senairs.org.br" }] 
maintainers = [{ name = "Pedro Sidra de Freitas", email = "pedro.sidra@senairs.org.br" }] 
readme = "README.md" 
license = { file = "LICENSE" } 
keywords = ["point cloud", "dash" ] 
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"] 
requires-python = ">=3.7" 